# glTF-reader

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/json/: CMakeLists.txt  json_nowarn.hpp
include/gltf/: file_reader.h  gltf.h  gltf_read_exception.h
include/gltf/data/: accessor.h  animation.h  asset.h  binary_buffer.h  buffer.h  buffer_view.h  camera.h  file.h  image.h  material.h  mesh.h  node.h  sampler.h  scene.h  skin.h  texture.h  texture_info.h
source/: CMakeLists.txt  json_utils.h
source/readers/: accessor_reader.cc  accessor_reader.h  animation_reader.cc  animation_reader.h  asset_reader.cc  asset_reader.h  buffer_reader.cc  buffer_reader.h  buffer_view_reader.cc  buffer_view_reader.h  camera_reader.cc  camera_reader.h  file_reader.cc  image_reader.cc  image_reader.h  material_reader.cc  material_reader.h  mesh_reader.cc  mesh_reader.h  node_reader.cc  node_reader.h  sampler_reader.cc  sampler_reader.h  scene_reader.cc  scene_reader.h  skin_reader.cc  skin_reader.h  texture_reader.cc  texture_reader.h
